test/type-error-1.ktn
// TODO(strager): Improve error reporting.

def bar (a [a] -> Char):
  ->x; [x] 1 __add_int
